[package]
name = "waw"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys  = "0.3"
web-sys = {version="0.3", features=["Element", "HtmlElement", "Event", "MouseEvent", "DragEvent", "DataTransfer"]}
yew = "0.19"
gloo = "0.7"