[package]
name = "waw"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = "1.0"
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys  = "0.3"
web-sys = {version="0.3", features=["Element", "HtmlElement", "DomRect", "Event", "MouseEvent", "DragEvent", "DataTransfer", "Touch", "TouchList", "TouchEvent"]}
yew = "0.19"
gloo = "0.7"
